force-app/main/default/objects/FoxDen_Box__c/FoxDen_Box__c.object-meta.xml
<CustomObject>
    <description>FoxDen box includes ChromeBox, Microphone/Speaker, and Camera</description>
    <label>FoxDen Box</label>
    <nameField>
        <displayFormat>FoxDenBox-{00000}</displayFormat>
        <label>FoxDen Box Record</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>FoxDen Boxes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>