force-app/main/default/objects/FoxDen_Box__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup field for the account this FoxDen Box belongs to.</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>FoxDen Boxes</relationshipLabel>
    <relationshipName>FoxDen_Boxes</relationshipName>
    <type>Lookup</type>
</CustomField>