force-app/main/default/objects/FoxDen_Box__c/fields/Beacon_Id__c.field-meta.xml
<CustomField>
    <fullName>Beacon_Id__c</fullName>
    <description>The UUID of the beacon</description>
    <label>Beacon Id</label>
    <length>36</length>
    <required>true</required>
    <type>Text</type>
</CustomField>