force-app/main/default/objects/FoxDen_Box__c/fields/Beacon_Major_Value__c.field-meta.xml
<CustomField>
    <fullName>Beacon_Major_Value__c</fullName>
    <label>Beacon Major Value</label>
    <precision>5</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>