force-app/main/default/objects/FoxDen_Box__c/fields/Beacon_Minor_Value__c.field-meta.xml
<CustomField>
    <fullName>Beacon_Minor_Value__c</fullName>
    <label>Beacon Minor Value</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>