force-app/main/default/objects/FoxDen_Box__c/fields/Inactive__c.field-meta.xml
<CustomField>
    <fullName>Inactive__c</fullName>
    <defaultValue>false</defaultValue>
    <description>A flag indicating whether or not this box is active</description>
    <label>Inactive</label>
    <type>Checkbox</type>
</CustomField>