force-app/main/default/objects/FoxDen_Box__c/fields/Kiosk_Email__c.field-meta.xml
<CustomField>
    <fullName>Kiosk_Email__c</fullName>
    <label>Kiosk Email</label>
    <required>true</required>
    <type>Email</type>
</CustomField>