force-app/main/default/objects/FoxDen_Box__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <label>Kiosk Password</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
</CustomField>