force-app/main/default/objects/FoxDen_Box__c/fields/Room_Name__c.field-meta.xml
<CustomField>
    <fullName>Room_Name__c</fullName>
    <inlineHelpText>This is an internal reference that the customer can pick to use to reference their boxes easier with ReadyTalk</inlineHelpText>
    <label>Room Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>