force-app/main/default/objects/FoxDen_Box__c/fields/RT_FoxDenBox_Id__c.field-meta.xml
<CustomField>
    <fullName>RT_FoxDenBox_Id__c</fullName>
    <description>Migration</description>
    <externalId>true</externalId>
    <label>RT FoxDenBox Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>