force-app/main/default/objects/FoxDen_Box__c/fields/sku__c.field-meta.xml
<CustomField>
    <fullName>sku__c</fullName>
    <label>Kit ID</label>
    <length>20</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>