force-app/main/default/objects/FoxDen_Box__c/fields/Status_Description__c.field-meta.xml
<CustomField>
    <fullName>Status_Description__c</fullName>
    <label>Status_Description</label>
    <type>TextArea</type>
</CustomField>