force-app/main/default/objects/FoxDen_Box__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Account__c</columns>
    <columns>Date_Shipped__c</columns>
    <columns>Inactive__c</columns>
    <columns>Room_Name__c</columns>
    <columns>Status__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>