force-app/main/default/objects/FoxDen_Box__c/listViews/FoxDen_Boxes_with_ID.listView-meta.xml
<ListView>
    <fullName>FoxDen_Boxes_with_ID</fullName>
    <columns>NAME</columns>
    <columns>sku__c</columns>
    <columns>Account__c</columns>
    <columns>Beacon_Minor_Value__c</columns>
    <columns>Status__c</columns>
    <columns>Kiosk_Email__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>notEqual</operation>
        <value>Delete,Deleted</value>
    </filters>
    <label>FoxDen Boxes with ID</label>
</ListView>